--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>My todo list</title>
+    <title>Lista de tareas</title>
   </head>
   <body>
     <div id="cointainer">
       <nav>
-        <p>Bienvenido <span class="user-name">User</span></p>
+        <p>Bienvenido</p>
       </nav>
       <main>
         <div id="folders">
@@ -18,7 +18,7 @@
               type="text"
               name="folder-name"
               id="folder-name"
-              placeholder="Your new folder"
+              placeholder="Agrega un folder"
             />
             <input type="submit" value="Create new" />
           </form>
@@ -30,12 +30,12 @@
               type="text"
               name="task-name"
               id="task-name"
-              placeholder="Your task"
+              placeholder="Agrega tus tareas"
             />
             <input type="date" name="task-date" id="task-date" />
             <select name="task-priority" id="task-priority">
-              <option value="urgent">urgent</option>
-              <option value="normal">normal</option>
+              <option value="urgent">Urgente</option>
+              <option value="normal">Normal</option>
             </select>
             <input type="submit" value="+" />
           </form>
@@ -49,7 +49,7 @@
               type="text"
               name="task-name"
               id="task-name-edit"
-              placeholder="Your task"
+              placeholder="Tus tareas"
             />
             <input type="date" name="task-date" id="task-date-edit" />
             <select name="task-priority" id="task-priority-edit">
