UTF-8 update and Spanish language

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
               type="text"
               name="folder-name"
               id="folder-name"
-              placeholder="Agrega un folder"
+              placeholder="Agrega una carpeta"
             />
-            <input type="submit" value="Create new" />
+            <input type="submit" value="Nueva Carpeta" />
           </form>
           <div class="card"></div>
         </div>
@@ -53,7 +53,7 @@
             />
             <input type="date" name="task-date" id="task-date-edit" />
             <select name="task-priority" id="task-priority-edit">
-              <option value="urgent">urgent</option>
+              <option value="urgent">urgente</option>
               <option value="normal">normal</option>
             </select>
             <input type="submit" value="Save" />
